feat: improve member signup flow and profile management